# python_url_shortener

./: .gitignore  Demonstrating the URL Shortener (Video) – Real Python.md  README.md  main.py  pyproject.toml
shortener_app/: config.py
